// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalDetailAdvancementStep /> can render a step with status 1`] = `
<span>
  <div
    style={
      Object {
        "marginLeft": "9px",
        "paddingLeft": "8px",
        "paddingTop": "5px",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#hexCode",
          "borderRadius": "50%",
          "color": "#767676",
          "float": "left",
          "height": "16px",
          "lineHeight": "28px",
          "marginLeft": "-18px",
          "marginTop": "-10px",
          "textAlign": "center",
          "width": "16px",
        }
      }
    />
    <div
      style={
        Object {
          "marginLeft": "15px",
          "marginTop": "-15px",
        }
      }
    >
      <div>
        Step title
      </div>
      <div
        className="excerpt small"
      >
        <span>
          <FormattedDate
            day="numeric"
            month="short"
            value={"2017-09-05T13:48:55.000Z"}
            year="numeric"
          />
           - 
          <FormattedDate
            day="numeric"
            month="short"
            value={"2017-09-16T23:08:01.000Z"}
            year="numeric"
          />
        </span>
      </div>
      <Label
        bsClass="label"
        bsStyle="success"
        style={
          Object {
            "borderRadius": "15px",
            "marginTop": "5px",
          }
        }
      >
        Salut
      </Label>
    </div>
    <br />
  </div>
</span>
`;

exports[`<ProposalDetailAdvancementStep /> can render a step without status 1`] = `
<span>
  <div
    style={
      Object {
        "marginLeft": "9px",
        "paddingLeft": "8px",
        "paddingTop": "5px",
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#hexCode",
          "borderRadius": "50%",
          "color": "#767676",
          "float": "left",
          "height": "16px",
          "lineHeight": "28px",
          "marginLeft": "-18px",
          "marginTop": "-10px",
          "textAlign": "center",
          "width": "16px",
        }
      }
    />
    <div
      style={
        Object {
          "marginLeft": "15px",
          "marginTop": "-15px",
        }
      }
    >
      <div>
        Step title
      </div>
      <div
        className="excerpt small"
      >
        <span>
          <FormattedDate
            day="numeric"
            month="short"
            value={"2017-09-05T13:48:55.000Z"}
            year="numeric"
          />
           - 
          <FormattedDate
            day="numeric"
            month="short"
            value={"2017-09-16T23:08:01.000Z"}
            year="numeric"
          />
        </span>
      </div>
    </div>
    <br />
  </div>
</span>
`;
